# python-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_SLOP_CLEANUP.md  DOCUMENTS_GUIDE.md  FULL_STACK_TEST_REPORT.md  IMPLEMENTATION_LOG.md  Makefile  README.md  SETUP_COMPARISON.md  SIMPLIFIED_TESTING.md  TECHNICAL_DESIGN.md  TESTING.md  TESTING_GUIDE.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  features.env  features.env.fullstack  features.env.microservices  features.env.minimal
.claude/: CLAUDE.md
backend/: Dockerfile  Dockerfile.celery  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_28_0116-e33669fc7a6c_initial_migration.py  2025_12_29_0001-add_rag_tables.py  2025_12_30_0002-update_rag_document_constraints.py  2025_12_30_0003-add_rag_message_sequence.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  documents.py  graph.py  health.py  rag.py  router.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  decorators.py  logging.py  telemetry.py
backend/app/helpers/: __init__.py  celery_app.py  mongodb.py  neo4j_helper.py  postgres.py  rabbitmq.py  redis_helper.py
backend/app/helpers/llm/: __init__.py  anthropic_client.py  gemini_client.py  langchain_client.py  litellm_client.py  ollama_client.py  openai_client.py
backend/app/models/mongodb/: __init__.py  document.py
backend/app/models/neo4j/: __init__.py  graph_node.py
backend/app/models/postgres/: __init__.py  base.py  feature_flag.py  rag.py
backend/app/repositories/: document_repository.py  graph_repository.py  rag_repository.py
backend/app/schemas/: document.py  feature_flag.py  graph.py  health.py  rag.py
backend/app/services/: document_service.py  feature_flag_service.py  graph_service.py
backend/app/services/rag/: __init__.py  chat_agent.py  embedding_service.py  ingestion_service.py  rag_service.py
backend/app/tasks/: __init__.py  example_tasks.py  llm_tasks.py
backend/scripts/: seed_data.py
documents/: .gitkeep
frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  auth.ts  client.ts  rag.ts  ragTypes.ts  types.ts
frontend/src/context/: AuthContext.tsx
nginx/: Dockerfile  nginx.conf
profiles/: README.md  ai-cloud.env  ai-local.env  async-tasks.env  data-platform.env  everything.env  fullstack.env  minimal.env
scripts/: generate-profiles.sh  quick-start.sh  test-rag-workflow.sh  verify-setup.sh
(+16 files in other folders)
